--- a/chat-client/www/templates/menu.html
+++ b/chat-client/www/templates/menu.html
@@ -3,21 +3,49 @@
     <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
       </ion-nav-back-button>
-
       <ion-nav-buttons side="left">
-        <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+        <button class="button icon ion-navicon" menu-toggle="left">
         </button>
       </ion-nav-buttons>
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
+    
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
-      <h1 class="title">SideBar</h1>
+      <h1 class="title">Main Menu</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
+        <ion-item nav-clear menu-close>
+          <a class="item-content item-icon-left" href="#/app/chats">
+            <i class="icon ion-chatbubbles"></i>
+            My Chats
+            <span class="badge badge-assertive">0</span>
+          </a>
+        </ion-item>
+        <ion-item nav-clear menu-close>
+          <a class="item-content item-icon-left" href="#">
+            <i class="icon ion-person-stalker"></i>
+            Lawyers
+            <span class="badge badge-assertive">0</span>
+          </a>
+        </ion-item>
+        <ion-item nav-clear menu-close>
+          <a class="item-content item-icon-left" href="#">
+            <i class="icon ion-person"></i>
+            My Profile
+          </a>
+        </ion-item>
+        <ion-item nav-clear menu-close>
+          <a class="item-content item-icon-left" href="#">
+            <i class="icon ion-document-text"></i>
+            Documents
+            <span class="badge badge-assertive">100</span>
+          </a>
+        </ion-item>
+        <div class="item item-divider">Other</div>
         <ion-item nav-clear menu-close ng-click="login()">
           Login
         </ion-item>
