--- a/chat-client/www/templates/menu.html
+++ b/chat-client/www/templates/menu.html
@@ -4,7 +4,7 @@
       <ion-nav-back-button>
       </ion-nav-back-button>
       <ion-nav-buttons side="left">
-        <button class="button icon ion-navicon" menu-toggle="left">
+        <button class="button button-icon icon ion-navicon" menu-toggle="left">
         </button>
       </ion-nav-buttons>
     </ion-nav-bar>
@@ -48,15 +48,6 @@
         <div class="item item-divider">Other</div>
         <ion-item nav-clear menu-close ng-click="login()">
           Login
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/search">
-          Search
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/browse">
-          Browse
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/playlists">
-          Playlists
         </ion-item>
       </ion-list>
     </ion-content>
