Added chat_message model and ability to save message.

--- a/chat-client/www/css/style.css
+++ b/chat-client/www/css/style.css
@@ -45,6 +45,14 @@
   color:#fff;
 }
 
+.messages li.-left small {
+  float: right;
+}
+
+.messages li.-right small {
+  float: left;
+}
+
 .messages img {
   display:block;
   max-width:65%;
