--- a/chat-client/www/templates/chat/chat.html
+++ b/chat-client/www/templates/chat/chat.html
@@ -7,7 +7,8 @@
             <div>
               <img src="http://ionicframework.com/img/docs/venkman.jpg" class="b-chat-ava">
               <p style="overflow: auto;">
-                {{message.content}}
+                {{message.content}}<br>
+                <small am-time-ago="message.createdAt"></small>
               </p>
             </div>
           </li>
