--- a/chat-client/www/templates/chat/chat.html
+++ b/chat-client/www/templates/chat/chat.html
@@ -7,7 +7,7 @@
             <div>
               <img src="http://ionicframework.com/img/docs/venkman.jpg" class="b-chat-ava">
               <p style="overflow: auto;">
-                {{message.content}}<br>
+                {{message.text}}<br>
                 <small am-time-ago="message.createdAt"></small>
               </p>
             </div>
@@ -18,7 +18,7 @@
   </ion-content>
   <ion-footer-bar  class="bar-frosted" style="border-top: 1px solid #b2b2b2;">
     <div class="item item-input" style="width: 100%; padding-right: 10px;">
-      <input type="text" placeholder="Message.." ng-model="message.content">
+      <input type="text" placeholder="Message.." ng-model="message.text">
       <i class="icon ion-paper-airplane" style="font-size: 30px;" ng-click="sendMessage()"></i>
     </div>
   </ion-footer-bar>
